--- a/index.html
+++ b/index.html
@@ -4,21 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="css/bootstrap-reboot.css">
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <title>Document</title>    
 </head>
 <body>
     <div class="container-fluid bg-primary">
-
+        <h1>Hello World</h1>
     </div>
- <link rel="stylesheet" href="js/bootstrap.bundle.js">   
- <link rel="stylesheet" href="js/bootstrap.bundle.min.js">   
- <link rel="stylesheet" href="js/bootstrap.js">   
- <link rel="stylesheet" href="js/bootstrap.min.js">   
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>  
 </body>
 </html>
