--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
     <title>Document</title>    
 </head>
 <body>
-    <div class="container-fluid bg-primary">
-        <h1>Hello World</h1>
+    <header>
+        <div class="container">
+        <div class="branding">
+            <h4>My Logo</h4>
+        </div>
+        <nav class="navbar">
+            <ul>
+                <li><a href="#">About Me</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact me</a></li>
+            </ul>
+        </nav>
     </div>
+    </header>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>  
 </body>
