--- a/index.html
+++ b/index.html
@@ -1,28 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <title>Document</title>    
+    <title>Document</title>
 </head>
+
 <body>
-    <header>
-        <div class="container">
-        <div class="branding">
-            <h4>My Logo</h4>
-        </div>
-        <nav class="navbar">
-            <ul>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact me</a></li>
-            </ul>
+    <header class="container">
+        <nav class="navbar navbar-expand-sm bg-white">
+
+            <div class="container-fluid">
+                <div class="logo">
+                    <a href="index.html"><img src="./images/Logo.svg" alt="logo"></a>
+                </div>
+                <!-- Links -->
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="#">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+
         </nav>
-    </div>
     </header>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>  
+    <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
