ADD HEADER CONTENT

--- a/index.html
+++ b/index.html
@@ -10,29 +10,35 @@
 </head>
 
 <body>
-    <header class="container">
-        <nav class="navbar navbar-expand-sm bg-white">
+    <div class="container-fluid">
+        <header class="container">
+            <nav class="navbar navbar-expand-sm bg-white">
 
-            <div class="container-fluid">
-                <div class="logo">
-                    <a href="index.html"><img src="./images/Logo.svg" alt="logo"></a>
+                <div class="container-fluid">
+                    <div class="logo">
+                        <a href="index.html"><img src="./images/Logo.svg" alt="logo"></a>
+                    </div>
+                    <!-- Links -->
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#">Contact</a>
+                        </li>
+                    </ul>
                 </div>
-                <!-- Links -->
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Contact</a>
-                    </li>
-                </ul>
-            </div>
-
-        </nav>
-    </header>
+            </nav>
+        </header>
+</div>
+<main class="container">
+    <section>
+        <h1>I am Danny <br> Glad to See you</h1>
+    </section>
+</main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
