--- a/index.html
+++ b/index.html
@@ -79,6 +79,125 @@
             <div class="col-2"></div>
 
         </section>
+        [17:56, 23/02/2022] Edward Partber: <section class="works">
+            <div class="single-work">
+                <img src="./img/Portfolio6.png" alt="Portfolio 1">
+                <div class="holder">
+                    <h2>Tonic</h2>
+
+                    <div class="experience">
+                        <span>CANOPY</span>
+                        <ul>
+                            <li>Backend Dev</li>
+                            <li>2015</li>
+                        </ul>
+                    </div>
+
+                    <p>
+                        A daily selection of privately personalized reads; no accounts or
+                        sign-ups required.
+                    </p>
+
+                    <ul class="skills">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                    </ul>
+
+                    <a href="#" class="btn">See Project</a>
+                </div>
+            </div>
+            <div class="single-work left">
+                <img src="./img/Portfolio5.png" alt="Portfolio 2">
+
+                <div class="holder">
+                    <h2>
+                        Multi-Post<br>
+                        Stories
+                    </h2>
+
+                    <div class="experience">
+                        <span>CANOPY</span>
+                        <ul>
+                            <li>Backend Dev</li>
+                            <li>2015</li>
+                        </ul>
+                    </div>
+
+                    <p>
+                        A daily selection of privately personalized reads; no accounts or
+                        sign-ups required.
+                    </p>
+
+                    <ul class="skills">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                    </ul>
+
+                    <a href="#" class="btn">See Project</a>
+                </div>
+            </div>
+            <div class="single-work">
+                <img src="./img/Portfolio7.png" alt="Portfolio 3">
+
+                <div class="holder">
+                    <h2>Tonic</h2>
+
+                    <div class="experience">
+                        <span>CANOPY</span>
+                        <ul>
+                            <li>Backend Dev</li>
+                            <li>2015</li>
+                        </ul>
+                    </div>
+
+                    <p>
+                        A daily selection of privately personalized reads; no accounts or
+                        sign-ups required.
+                    </p>
+
+                    <ul class="skills">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                    </ul>
+
+                    <a href="#" class="btn">See Project</a>
+                </div>
+            </div>
+            <div class="single-work left">
+                <img src="./img/Portfolio8.png" alt="Portfolio 4">
+
+                <div class="holder">
+                    <h2>
+                        Multi-Post<br>
+                        Stories
+                    </h2>
+
+                    <div class="experience">
+                        <span>CANOPY</span>
+                        <ul>
+                            <li>Backend Dev</li>
+                            <li>2015</li>
+                        </ul>
+                    </div>
+
+                    <p>
+                        A daily selection of privately personalized reads; no accounts or
+                        sign-ups required.
+                    </p>
+
+                    <ul class="skills">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                    </ul>
+
+                    <a href="#" class="btn">See Project</a>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
