--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
                 <div class="social-media-icons1">
                     <ul class="social-list">
                         <li>
-                            <a href="#"><img src="./img/twitter.svg" alt="twitter"></a>
+                            <a href="#"><img src="./images/twitter.svg" alt="twitter"></a>
                         </li>
                         <li>
-                            <a href="#"><img src="./img/Linkedin.svg" alt="LinkedIn"></a>
+                            <a href="#"><img src="./images/Linkedin.svg" alt="LinkedIn"></a>
                         </li>
                         <li>
-                            <a href="#"><img src="./img/m.svg" alt="M"></a>
+                            <a href="#"><img src="./images/m.svg" alt="M"></a>
                         </li>
                         <li>
-                            <a href="#"><img src="./img/git.svg" alt="GIT"></a>
+                            <a href="#"><img src="./images/git.svg" alt="GIT"></a>
                         </li>
                         <li>
-                            <a href="#"><img src="./img/hn.svg" alt="HN"></a>
+                            <a href="#"><img src="./images/hn.svg" alt="HN"></a>
                         </li>
                     </ul>
                 </div>
@@ -81,7 +81,7 @@
         </section>
         [17:56, 23/02/2022] Edward Partber: <section class="works">
             <div class="single-work">
-                <img src="./img/Portfolio6.png" alt="Portfolio 1">
+                <img src="./images/Portfolio6.png" alt="Portfolio 1">
                 <div class="holder">
                     <h2>Tonic</h2>
 
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="single-work left">
-                <img src="./img/Portfolio5.png" alt="Portfolio 2">
+                <img src="./images/Portfolio5.png" alt="Portfolio 2">
 
                 <div class="holder">
                     <h2>
@@ -139,7 +139,7 @@
                 </div>
             </div>
             <div class="single-work">
-                <img src="./img/Portfolio7.png" alt="Portfolio 3">
+                <img src="./images/Portfolio7.png" alt="Portfolio 3">
 
                 <div class="holder">
                     <h2>Tonic</h2>
@@ -167,7 +167,7 @@
                 </div>
             </div>
             <div class="single-work left">
-                <img src="./img/Portfolio8.png" alt="Portfolio 4">
+                <img src="./images/Portfolio8.png" alt="Portfolio 4">
 
                 <div class="holder">
                     <h2>
@@ -195,6 +195,84 @@
                     </ul>
 
                     <a href="#" class="btn">See Project</a>
+                </div>
+            </div>
+        </section>
+        <section class="about-myself">
+            <div class="about">
+                <h1>
+                    About<br>
+                    Myself
+                </h1>
+
+                <p>
+                    Hello I’m a software developer! I can help you build a product , feature or website Look through
+                    some of my work and experience! If you like what you see and have a project you need coded, don’t
+                    hestiate to contact me.
+                </p>
+                <div class="purple-text2">
+                    <span> LET'S CONNECT </span>
+                </div>
+
+                <div class="social-media-icons2">
+                    <ul class="social-list">
+                        <li>
+                            <a href="#"><img src="./img/twitter.svg" alt="Twitter"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./img/Linkedin.svg" alt="LinkedIn"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./img/m.svg" alt="M"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./img/git.svg" alt="Git"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./img/hn.svg" alt="HN"></a>
+                        </li>
+                    </ul>
+                </div>
+
+                <a href="#" class="btn">Get my resume</a>
+            </div>
+
+            <div class="languages">
+                <div>
+                    <div class="heading">
+                        <span>Languages</span>
+                        <img src="./img/Union_d.png" class="chevron-down" alt="chevron down" />
+                    </div>
+
+                    <div class="individual-languages">
+                        <div>
+                            <img src="./img/Java.png" alt="Java">
+                            <p>JavaScript</p>
+                        </div>
+
+                        <div>
+                            <img src="./img/html.png" alt="HTML">
+                            <p>HTML</p>
+                        </div>
+
+                        <div>
+                            <img src="./img/css.png" alt="CSS">
+                            <p>CSS</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="grey-bottom-border">
+                    <div class="heading">
+                        <span>Frameworks</span>
+                        <img src="./img/Union.png" class="chevron-right" alt="chevron right" />
+                    </div>
+                </div>
+                <div class="grey-bottom-border">
+                    <div class="heading">
+                        <span>Skills</span>
+                        <img src="./img/Union.png" class="chevron-right" alt="chevron right" />
+                    </div>
                 </div>
             </div>
         </section>
