--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <div class="contact-text">
                     <h2>Contact me</h2>
     
-                    <p>If you have an application you are interested in developing, a feature that you need built
+                    <p>If you have an application you are interested in developing,<br> a feature that you need built
                         or a project that you need coding. I'd love to help with it.</p>
                 </div>
     
@@ -295,7 +295,7 @@
                 </div>
             </footer>
         </main>
-    </div>
+        </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
